# heartrate-gp

./: main.py  pyproject.toml  requirements.txt
data/: Afternoon_Run (1).fit  Afternoon_Run.fit  Evening_Run.fit  Pacing_Robby_.fit  Shakeout_.fit  Warmup.fit
heartrate_gp/data/: util.py
notebooks/: train.ipynb
