[tool.poetry]
name = "heartrate_gp"
version = "0.1"
description = "GP Regression for heartrate prediction"
readme = "README.md"
authors = ["Beck LaBash <becklabash@gmail.com>", "Wilson Glass <wilsonglass503@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fitparse = "1.2.0"
ipykernel = "6.27.1"
gpytorch = "1.11"
pandas = "2.1.3"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"